--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -54,6 +54,23 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+input[type=text] {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  margin-bottom: 8px;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  transition: box-shadow 0.25s;
+}
+input[type=text]:focus,
+input[type=text]:focus-visible {
+  outline: none;
+  box-shadow: 0 0 2em #646cffaa;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
